[package]
name = "token-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["cargo"] }
bitcoinsuite-core = {path = "../../bitcoinsuite-core"}
bytes = "1.4"
hex = "0.4"
